# qa_g-rest-api

./: README.md  pyproject.toml  requirements.txt
tests/: conftest.py  test_register_post.py  test_register_with_post_method.py  test_users_create_with_post_method.py  test_users_delete.py  test_users_get_list_users.py  test_users_get_list_users_with_get_method.py  test_users_get_single_user.py  test_users_get_single_user_with_get_method.py  test_users_post_create.py  test_users_put_update.py  test_users_update_with_put_method.py  test_users_with_delete_method.py
utils/: allure_attach.py  log_extending.py
